# chuchu_tree

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
backend/: .dockerignore  .gitignore  .pylintrc  Dockerfile.dev  Dockerfile.prod  Jenkinsfile  PR_TEMPLATE.md  README.md  TODO.md  db_initializer.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 07840506c7ea_add_order_and_relationship.py  31a0fd8f1cd1_add_tag_id_to_skill.py  51ec33d74fa2_remove_activity_tables_and_user_account_.py  5664adfd081c_add_email.py  84ae196aaec7_initial_migration.py  a1b2c3d4e5f6_add_is_synced_to_account_link.py  a4c2e8f9d1b3_per_tag_tag_skill_schema.py  adfb5f7c7742_insert_data.py  b1c2d3e4f5a6_streak_refactor.py  d3e4f5a6b7c8_add_system_log.py  dc70cd732018_initial_timing_alter.py  g8c9d0e1f2a3_rename_recommended_problem_ids.py  h9d0e1f2a3b4_drop_study_invitation_unique_constraint.py  k2g3h4i5j6k7_drop_study_name_unique_constraint.py
backend/app/: main.py  middlewares.py
backend/app/config/: base_config.py  dev_config.py  local_config.py  prod_config.py  settings.py  tag_config.py
backend/app/core/: api_response.py  containers.py  database.py  database_models.py  error_codes.py  exception.py  loggers.py
backend/data/: main.py
backend/docs/: TEST_CHECKLIST.md  test_plan.md
backend/scripts/: migrate_streak_to_user_date_record.py  run_tests.py  update_test_checklist.py
backend/tests/: conftest.py
backend/tests/docs/: test_checklist.md
(+1004 files in other folders)
